Fix Header on mobile

--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -35,7 +35,10 @@
     h1,
     h3 {
     }
-
+    h1 {
+      margin-left: 0;
+      margin-top: 20px;
+    }
     h3 {
       margin-top: 20px;
       margin-left: 0;
